--- a/paginas/aboutPage.html
+++ b/paginas/aboutPage.html
@@ -11,22 +11,30 @@
 <body>
     <header>
         <section id="homePageHeader">
-                <div id="homeLogo">
-                    <img src="../icones/logoNACAJalinhado.png" alt="">
-                    <h2>NACAJ</h2>
-                </div>
-                <nav>
-                    <ol>
-                        <a href="homePage.html">
-                            <li>Home</li>
-                        </a>
-                        <a href="aboutPage.html">
-                            <li>About</li>
-                        </a>
-                    </ol>
-                </nav>
+            <div id="homeLogo">
+                <img src="../icones/logoNACAJalinhado.png" alt="">
+                <h2>NACAJ</h2>
+            </div>
+            <nav>
+                <ol id="nav-list" class="retracted">
+                    <a href="../index.html">
+                        <li>Home</li>
+                    </a>
+                    <a href="homeActivitiesPage.html">
+                    <li>Atividades</li>
+                </a>
+                    <a href="aboutPage.html">
+                        <li>About</li>
+                    </a>
+                </ol>
+            </nav>
+            <button id="menu">
+                <p>click</p>
+            </button>
         </section>
     </header>
     
+
+    <script src="../javascript/header.js"></script>
 </body>
 </html>
