--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ol>
             </nav>
             <button id="menu">
-                <p>click</p>
+                <img src="icones/humburguer.png" alt="">
             </button>
 
         </section>
@@ -63,7 +63,7 @@
         </section>
 
         <section id="landingFooter">
-            <p>Copyright nacaj 2025 ©</p>
+            <p>© 2025 NACAJ</p>
 
         </section>
     </header>
