--- a/paginas/activitieDetails/activitieDetails.html
+++ b/paginas/activitieDetails/activitieDetails.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="../icones/logoNACAJalinhado.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/headerStyle.css">
+    <link rel="stylesheet" href="../../css/headerStyle.css">
+    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/activitiesDetails.css">
 </head>
 <body>
     <header>
         <section id="homePageHeader">
             <div id="homeLogo">
-                <img src="../icones/logoNACAJalinhado.png" alt="">
+                <img src="../../icones/logoNACAJalinhado.png" alt="">
                 <h2>NACAJ</h2>
             </div>
             <nav>
                 <ol id="nav-list" class="retracted">
-                    <a href="../index.html">
+                    <a href="">
                         <li>Home</li>
                     </a>
-                    <a href="homeActivitiesPage.html">
-                    <li>Atividades</li>
-                </a>
-                    <a href="aboutPage.html">
+                    <a href="">
+                        <li>Atividades</li>
+                    </a>
+                    <a href="">
                         <li>About</li>
                     </a>
                 </ol>
             </nav>
             <button id="menu">
-                <img src="../icones/humburguer.png" alt="">
+                <img src="../../icones/humburguer.png" alt="">
             </button>
         </section>
     </header>
-    
 
-    <script src="../javascript/header.js"></script>
+
+    <script src="../../javascript/header.js"></script>
 </body>
 </html>
