landing page main section working on

--- a/index.html
+++ b/index.html
@@ -62,11 +62,57 @@
             </div>
         </section>
 
+        <div id="seta-para-baixo"></div>
+        
+    </header>
+    <main>
+
+        877290752
+
+        <section>
+            <div>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                <span>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
+                </span>
+                
+            </div>
+        </section>
+
+    </main>
+    <footer>
         <section id="landingFooter">
             <p>© 2025 NACAJ</p>
-
         </section>
-    </header>
+    </footer>
 
     <script defer src="javascript/main.js"></script>
     <script defer src="javascript/header.js"></script>
