landing page down arrow first iteration

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <a href="paginas/homeActivitiesPage.html">
                         <li>Atividades</li>
                     </a>
-                    <a href="paginas/aboutPage.html">
-                        <li>About</li>
+                    <a href="paginas/noticiasPage.html">
+                        <li>Noticias</li>
                     </a>
                 </ol>
             </nav>
@@ -62,45 +62,114 @@
             </div>
         </section>
 
-        <div id="seta-para-baixo"></div>
+        <div class="outline">
+            <div id="seta-para-baixo"></div>
+        </div>
         
     </header>
     <main>
-        <section>
-            <div>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                <span>
-                    <h2></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laboriosam placeat dolorum nulla omnis vitae nobis officia inventore repellendus qui, numquam impedit officiis quis incidunt natus itaque aut perferendis? Provident?</p>
-                </span>
-                
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="firstSection">
+            <div id="landingFirstImg">
+                <img src="imagens/1749556060729.jpg" alt="">
+            </div>               
+
+            <div id="landingDescription">
+                <div>
+                    <h2>Seja nosso parceiro</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                </div>
             </div>
         </section>
 
