--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -25,8 +25,8 @@
                     <a href="homeActivitiesPage.html">
                         <li>Atividades</li>
                     </a>
-                    <a href="aboutPage.html">
-                        <li>About</li>
+                    <a href="noticiasPage.html">
+                        <li>Noticias</li>
                     </a>
                 </ol>
             </nav>
