criacao da pagina de noticias

--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="../icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/headerStyle.css">
+    <link rel="stylesheet" href="../css/noticias.css">
+    <script src="../javascript/noticias.js" defer></script>
 </head>
 <body>
     <header>
@@ -34,6 +36,32 @@
         </section>
     </header>
     
+
+    <main>
+        <section class="noticia noticia-retraida">
+            <div class="noticia-componentes">
+                <div class="noticia-imagem">
+                    <img src="../imagens/1749555959361.jpg" alt="">
+                </div>
+                <div class="noticia-texto">
+                    <div class="texto">
+                        <h2>O dia em que a terra parou!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore neque id ipsum unde architecto excepturi cupiditate repellat tempora voluptas...</p>
+                    </div>
+                    <a href="" class="noticia-link">
+                        <div class="botao"><p>Ver mais</p></div>
+                    </a>
+                </div>
+                <span>
+                </span>
+            </div>
+            <div class="noticia-icone">
+                <div class="back-icone">
+                    <div class="icone"></div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="../javascript/header.js"></script>
 </body>
