imagens da pagina de atividade perdem margem arredondada e ocupam 100% da largura da tela

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ol>
             </nav>
             <button id="menu">
-                <img src="icones/humburguer.png" alt="">
+                <div class="hamburguer"></div>
             </button>
 
         </section>
