--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -31,7 +31,7 @@
                 </ol>
             </nav>
             <button id="menu">
-                <img src="../icones/humburguer.png" alt="">
+                <div class="hamburguer"></div>
             </button>
         </section>
     </header>
@@ -65,7 +65,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Neste dia </p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus hic amet voluptates nulla voluptatum eveniet quos officiis repudiandae deserunt ut. Asperiores accusamus placeat ullam quaerat perspiciatis ratione modi ipsum magnam.</p>
                         </div>
                         <a href="activitieDetails/comemoracao1dejunho.html">
                             <button class="activities-button">
@@ -82,7 +82,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Neste dia </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum enim ut quisquam non maxime, eos tempore fugit velit. Eius vel magnam perspiciatis, aliquam eligendi dolores libero nulla cum dolore.</p>
                         </div>
                         <a href="activitieDetails/limpezadomar.html">
                             <button class="activities-button">
@@ -99,7 +99,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Neste dia </p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia odio ea maiores autem beatae corrupti, aliquid, eos soluta dolorem facilis quasi ipsa, veniam vero possimus blanditiis? Veniam, tempora tempore. Ea.</p>
                         </div>
                         <a href="">
                             <button class="activities-button">
@@ -116,7 +116,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Neste dia </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quidem excepturi molestias. Dolorum ad dolores nam ab, repudiandae atque at. Repudiandae quibusdam amet iste, optio accusantium ad adipisci iure consequatur!</p>
                         </div>
                         <a href="activitieDetails/activitieDetails.html">
                             <button class="activities-button">
@@ -133,7 +133,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Neste dia </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In excepturi ipsa explicabo eius deserunt nemo quas omnis error maxime. Ipsam corrupti quaerat consequatur provident nostrum nesciunt dolore impedit fuga similique?</p>
                         </div>
                         <a href="">
                             <button class="activities-button">
