--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -31,7 +31,7 @@
                 </ol>
             </nav>
             <button id="menu">
-                <img src="../icones/humburguer.png" alt="">
+                <div class="hamburguer"></div>
             </button>
         </section>
     </header>
