landing page colocacao da ultima imagem esplicativa

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </section>
             <section id="tema">
                 <h1>Quem somos?</h1>
-                <p>Nossos NACAJ, um grupo de jovens que se dedica em ajudar e apoiar.</p>
+                <p>Nos somos NACAJ, um grupo de jovens que se dedica em ajudar e apoiar.</p>
             </section>
             <div id="box">
                 <div class="icon_box">
@@ -70,75 +70,75 @@
     <main>
         <section id="firstSection">
             <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
+                <img src="imagens/1749556145269.jpg" alt="">
             </div>               
 
             <div id="landingDescription">
                 <div>
-                    <h2>Seja nosso parceiro</h2>
+                    <h2>Nós cuidamos da crianças</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                    <p>O principal motivação da nossa existência é garantir que as crianças, os adolescentes assim como os jovens não se sinta abandonados ou desanparados. E que os seus sonhos não sejam apenas o fruto de uma ilusão.</p>
                 </div>
             </div>
         </section>
 
         <section id="firstSection">
             <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
+                <img src="imagens/1749556390655.jpg" alt="">
             </div>               
 
             <div id="landingDescription">
                 <div>
-                    <h2>Seja nosso parceiro</h2>
+                    <h2>Nós trabalhamos com a comunidade</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                    <p>"Não da para ajudar a quem não quer ser ajudado", nós buscamos sempre ajudar as pessoas a sem ajudarem pois o ditado já diz "se alguem te pede peixe varias vezes, dá'lhe um anzol para que possa pesca'lo ele proprio". Deste modo buscamos sempre ansinar a comunidade a identificar os seus proprios problemas e por conta proria tomar a iniciativa.</p>
                 </div>
             </div>
         </section>
 
         <section id="firstSection">
             <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
+                <img src="imagens/1749556013214.jpg" alt="">
             </div>               
 
             <div id="landingDescription">
                 <div>
-                    <h2>Seja nosso parceiro</h2>
+                    <h2>Nós cuidamos do ambiente</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                    <p>A Associação NACAJ busca não só oferecer um futuro sorridente às crianças e adolescentes mas também busca melhorar o ambiente em que as mesmas se encontram.</p>
                 </div>
             </div>
         </section>
 
         <section id="firstSection">
             <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
+                <img src="imagens/1749556142687.jpg" alt="" class="img">
             </div>               
 
             <div id="landingDescription">
                 <div>
-                    <h2>Seja nosso parceiro</h2>
+                    <h2>Nós não olhamos para as nossas proprias limitações</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                    <p>Não importa o quão longe ou dificil seja nós estaremos sempre a disposição de ajudar a quem mais precisa. Com todas as nossas forças lotaremos sempre para que a dignidade humana seja respeitada e que os direitos humanos sajam aplicados sem nenhum tipo de discriminação.</p>
                 </div>
             </div>
         </section>
 
         <section id="firstSection">
             <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
+                <img src="imagens/1749555964931.jpg" alt="">
             </div>               
 
             <div id="landingDescription">
                 <div>
-                    <h2>Seja nosso parceiro</h2>
+                    <h2>Nós respeitamos as hierarquia</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                    <p>Todo o nosso trabalho embora seja humanitario, nós respeitamos sempre as autoridades locais para que a participação de todos e que as atividades possam decorrer sem implicação e que a distribuição das tarefas seja sempre ordeiras.</p>
                 </div>
             </div>
         </section>
