landing page ultima imagem

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </section>
             <section id="tema">
                 <h1>Quem somos?</h1>
-                <p>Nos somos NACAJ, um grupo de jovens que se dedica em ajudar e apoiar.</p>
+                <p>Nós somos NACAJ, um grupo de jovens que se dedica em ajudar e apoiar.</p>
             </section>
             <div id="box">
                 <div class="icon_box">
@@ -160,7 +160,7 @@
 
         <section id="firstSection">
             <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
+                <img src="imagens/1749556199825.jpg" alt="">
             </div>               
 
             <div id="landingDescription">
@@ -168,7 +168,7 @@
                     <h2>Seja nosso parceiro</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
+                    <p>Ajudemos a melhor servir fazendo suas doações com que puder e tiver. O menor gesto pode mudar o mundo ou pelo menos mudar a vida de alguem que sofre. A sua empatia conta.</p>
                 </div>
             </div>
         </section>
