adicao de icones aos links de navegacao para todas as paginas presentes

--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="index.html">
-                        <li>Home</li>
+                        <div class="list-icons">
+                            <img src="icones/dashboard_16181907.png" alt="">
+                            <li>Home</li>
+                        </div>
                     </a>
                     <a href="paginas/homeActivitiesPage.html">
-                        <li>Atividades</li>
+                        <div class="list-icons">
+                            <img src="icones/checklist_7111148.png" alt="">
+                            <li>Atividades</li>
+                        </div>
                     </a>
                     <a href="paginas/noticiasPage.html">
-                        <li>Noticias</li>
+                        <div class="list-icons">
+                            <img src="icones/world_2298220.png" alt="">
+                            <li>Noticias</li>
+                        </div>
                     </a>
                 </ol>
             </nav>
@@ -68,14 +77,14 @@
         
     </header>
     <main>
-        <section id="firstSection">
-            <div id="landingFirstImg">
+        <section class="firstSection">
+            <div class="landingFirstImg">
                 <img src="imagens/1749556145269.jpg" alt="">
             </div>               
 
-            <div id="landingDescription">
+            <div class="landingDescription">
                 <div>
-                    <h2>Nós cuidamos da crianças</h2>
+                    <h2>Nós cuidamos das crianças</h2>
                 </div>
                 <div>
                     <p>O principal motivação da nossa existência é garantir que as crianças, os adolescentes assim como os jovens não se sinta abandonados ou desanparados. E que os seus sonhos não sejam apenas o fruto de uma ilusão.</p>
@@ -83,12 +92,12 @@
             </div>
         </section>
 
-        <section id="firstSection">
-            <div id="landingFirstImg">
+        <section class="firstSection">
+            <div class="landingFirstImg">
                 <img src="imagens/1749556390655.jpg" alt="">
             </div>               
 
-            <div id="landingDescription">
+            <div class="landingDescription">
                 <div>
                     <h2>Nós trabalhamos com a comunidade</h2>
                 </div>
@@ -98,12 +107,12 @@
             </div>
         </section>
 
-        <section id="firstSection">
-            <div id="landingFirstImg">
+        <section class="firstSection">
+            <div class="landingFirstImg">
                 <img src="imagens/1749556013214.jpg" alt="">
             </div>               
 
-            <div id="landingDescription">
+            <div class="landingDescription">
                 <div>
                     <h2>Nós cuidamos do ambiente</h2>
                 </div>
@@ -113,12 +122,12 @@
             </div>
         </section>
 
-        <section id="firstSection">
-            <div id="landingFirstImg">
+        <section class="firstSection">
+            <div class="landingFirstImg">
                 <img src="imagens/1749556142687.jpg" alt="" class="img">
             </div>               
 
-            <div id="landingDescription">
+            <div class="landingDescription">
                 <div>
                     <h2>Nós não olhamos para as nossas proprias limitações</h2>
                 </div>
@@ -128,14 +137,14 @@
             </div>
         </section>
 
-        <section id="firstSection">
-            <div id="landingFirstImg">
+        <section class="firstSection">
+            <div class="landingFirstImg">
                 <img src="imagens/1749555964931.jpg" alt="">
             </div>               
 
-            <div id="landingDescription">
+            <div class="landingDescription">
                 <div>
-                    <h2>Nós respeitamos as hierarquia</h2>
+                    <h2>Nós respeitamos a hierarquia</h2>
                 </div>
                 <div>
                     <p>Todo o nosso trabalho embora seja humanitario, nós respeitamos sempre as autoridades locais para que a participação de todos e que as atividades possam decorrer sem implicação e que a distribuição das tarefas seja sempre ordeiras.</p>
@@ -143,32 +152,17 @@
             </div>
         </section>
 
-        <section id="firstSection">
-            <div id="landingFirstImg">
-                <img src="imagens/1749556060729.jpg" alt="">
-            </div>               
-
-            <div id="landingDescription">
-                <div>
-                    <h2>Seja nosso parceiro</h2>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ullam ea modi voluptatum tempore perspiciatis omnis, eaque veniam? Repellat, officia quae doloremque error corporis ea iusto sapiente fuga deserunt eos!</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="firstSection">
-            <div id="landingFirstImg">
+        <section class="firstSection">
+            <div class="landingFirstImg">
                 <img src="imagens/1749556199825.jpg" alt="">
             </div>               
 
-            <div id="landingDescription">
+            <div class="landingDescription">
                 <div>
                     <h2>Seja nosso parceiro</h2>
                 </div>
                 <div>
-                    <p>Ajudemos a melhor servir fazendo suas doações com que puder e tiver. O menor gesto pode mudar o mundo ou pelo menos mudar a vida de alguem que sofre. A sua empatia conta.</p>
+                    <p>Ajudemos a melhor servir fazendo suas doações com o que puder e tiver. O menor gesto pode mudar o mundo ou pelo menos mudar a vida de alguem que sofre. A sua empatia conta.</p>
                 </div>
             </div>
         </section>
