--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NACAJ | Noticias</title>
     <link rel="shortcut icon" href="../icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/headerStyle.css">
     <link rel="stylesheet" href="../css/noticias.css">
+    <link rel="shortcut icon" href="../icones/logoNACAJalinhado.png" type="image/x-icon">
     <script src="../javascript/noticias.js" defer></script>
 </head>
 <body>
@@ -20,13 +21,22 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../index.html">
-                        <li>Home</li>
+                        <div class="list-icons">
+                            <img src="../icones/dashboard_16181907.png" alt="">
+                            <li>Home</li>
+                        </div>
                     </a>
                     <a href="homeActivitiesPage.html">
-                    <li>Atividades</li>
+                        <div class="list-icons">
+                            <img src="../icones/checklist_7111148.png" alt="">
+                                                <li>Atividades</li>
+                        </div>
                 </a>
                     <a href="noticiasPage.html">
-                        <li>Noticias</li>
+                        <div class="list-icons">
+                            <img src="../icones/world_2298220.png" alt="">
+                            <li>Noticias</li>
+                        </div>
                     </a>
                 </ol>
             </nav>
